# roots

./: .gitignore  .gitmodules  Brewfile  CLAUDE.md  Cargo.toml  Makefile  README.md
doc/: generate-specs.md
doc/specs/import-command/: design.md  requirements.md  tasks.md
doc/steering/: product.md  structure.md  tech.md
share/: 5EIPAAAAQAAJ.xml  google_search_result.html  google_search_result.json  pg98.epub  pg98.mobi  pg98.opf.xml
src/: cli.yml  default.yml  main.rs
src/application/: book.rs  command.rs  files.rs  mobi.rs  mod.rs
src/application/book/: data.rs  epub.rs  file.rs  loader.rs  mobi.rs  mod.rs
src/application/internet/: mod.rs
src/configuration/: mod.rs
src/database/: query.rs
src/filesystem/: mod.rs
src/interface/: cli.rs
src/internet/: mod.rs
tests/: command_line.rs
