[package]
name = "roots_tng"
version = "0.1.0"
authors = ["Tom Regan <tomregan@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"
config = { version = "^0.9.3", features = ["yaml"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_yaml = "^0.8.0"